--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "homepage": "https://farwhyn.github.io/personal_portfolio_site",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
-    "deploy": "gh-pages -d dist"
+    "sass": "node-sass -w scss/ -o docs/css/ --recursive",
+    "deploy": "gh-pages -d docs"
   },
   "author": "James Zhou",
   "license": "MIT",
