--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Responsive Portfolio Website",
   "main": "index.js",
-  "homepage": "https://farwhyn.github.io/personal_portfolio_site",
+  "homepage": "https://farwhyn.github.io/",
   "scripts": {
     "sass": "node-sass -w scss/ -o docs/css/ --recursive",
     "deploy": "gh-pages -d docs"
